fix: text alignment must be center in barcode content

--- a/petualangan-ramadhan/scss/styles.scss
+++ b/petualangan-ramadhan/scss/styles.scss
@@ -135,6 +135,7 @@ body {
     &__leaderboard {
       margin-top: 1em;
       width: 100%;
+      text-align: center;
     }
 
     &__content {
@@ -187,6 +188,7 @@ body {
         flex-direction: column;
         font-size: 18px;
         font-weight: bold;
+        text-align: center;
 
         &__barcode {
           margin-top: 2em;
